objects/DeliveryPlan__c.object
<CustomObject>
    <fields>
        <fullName>Grid_ActivatedDate__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Delivery Plans</relationshipLabel>
        <relationshipName>Delivery_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Delivery Plans</relationshipLabel>
        <relationshipName>Delivery_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grid_ScheduleCount__c</fullName>
        <inlineHelpText>Please put a number between 0 and 24</inlineHelpText>
        <label>Schedule Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_ScheduleFrequency__c</fullName>
        <label>Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                    <isActive>false</isActive>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Start_Month__c</fullName>
        <label>Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Grid_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delivery Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grid_Quote__c</columns>
        <columns>Grid_ScheduleCount__c</columns>
        <columns>Grid_ScheduleFrequency__c</columns>
        <columns>Grid_StartDate__c</columns>
        <columns>Grid_EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>